Fixed the alignment issue in quota chart

--- a/src/main/webapp/styles/custom-style.css
+++ b/src/main/webapp/styles/custom-style.css
@@ -349,7 +349,7 @@ table.dataTable thead .sorting_desc::after {content: "\f0dd";}
 
 .dashboard-quota-area{font-weight:800; text-align:center;}
 .dashboard-quota-area span{display:block; color:#9fa0a2; font-weight:normal;}
-.dashboard-quota{margin:28px 0 28px 0; min-height: 124px;}
+.dashboard-quota{margin:20px 0 20px 0; min-height: 140px;}
 .dashboard-quota canvas{ margin-bottom:5px; position:relative; z-index:1;}
 .doughnutchart-value{position:absolute; z-index:0; color:#73919e; font-size:16px; font-weight:600; margin: 21% 0 0 32%;}
 .doughnut-fixed-area{width:150px; position:relative; z-index:0;}
